--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,36 @@
-fastapi == 0.75.0
-uvicorn == 0.17.5
-
-psycopg2 # connect to database
-sqlalchemy
-sqlalchemy_utils
-email-validator
-passlib[bcrypt]
-python-jose[cryptography]
-python-multipart
-alembic
+alembic==1.7.7
+anyio==3.5.0
+asgiref==3.5.0
+bcrypt==3.2.0
+cffi==1.15.0
+click==8.0.4
+colorama==0.4.4
+cryptography==36.0.1
+dnspython==2.2.1
+ecdsa==0.17.0
+email-validator==1.1.3
+fastapi==0.75.0
+greenlet==1.1.2
+h11==0.13.0
+idna==3.3
+importlib-metadata==4.11.2
+importlib-resources==5.4.0
+Mako==1.2.0
+MarkupSafe==2.1.0
+passlib==1.7.4
+psycopg2==2.9.3
+pyasn1==0.4.8
+pycparser==2.21
+pydantic==1.9.0
+python-dotenv==0.19.2
+python-jose==3.3.0
+python-multipart==0.0.5
+rsa==4.8
+six==1.16.0
+sniffio==1.2.0
+SQLAlchemy==1.4.32
+SQLAlchemy-Utils==0.38.2
+starlette==0.17.1
+typing_extensions==4.1.1
+uvicorn==0.17.5
+zipp==3.7.0
