--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # file & folder dibwh ini akan dicomment & jika diaktifkan file dan folder dibwh ini tdk akan di push ke github
-# __pycache__
-# develop
-# .env
-# ini_library.txt
+__pycache__
+develop
+.env
+ini_library.txt
