first simple cicd fix 7

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -7,4 +7,4 @@ jobs:
       - name: pulling git repo
         uses: actions/checkout@v2
       - name: hallo world
-        uses: echo "ini ditampilkan"
+        run: echo "ini ditampilkan"
