--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -6,5 +6,14 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
-      - name: hallo world
-        run: echo "ini ditampilkan"
+      - name: install python version 3.9
+        # lewat ubuntu biasa 
+        # uses: sudo apt install python
+        # install python https://github.com/marketplace/actions/setup-python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install all dependencies
+        run: pip install -r requirements.txt
