--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -17,7 +17,8 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: install all dependencies
         run: pip install -r requirements.txt
-      - name: test with pytest
+      - name: install pytest
         run:
           pip install pytest
-          pytest
+      - name: test with pytest
+        run: pytest -v -s
