--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -14,14 +14,14 @@ jobs:
   job1:
     # atur environment variabel
     env:
-      db_hostname: localhost
-      db_port: 5432
-      db_name: fastapi
-      db_username: root 
-      db_pass: password
-      jwt_secret_key: ini rahasia 
-      jwt_algoritma: HS256
-      jwt_expire: 15
+      db_hostname: ${{secrets.DB_HOSTNAME}}
+      db_port: ${{secrets.DB_PORT}}
+      db_name: ${{secrets.DB_NAME}}
+      db_username: ${{secrets.DB_USERNAME}}
+      db_pass: ${{secrets.DB_PASS}}
+      jwt_secret_key: ${{secrets.JWT_SECRET_KEY}} 
+      jwt_algoritma: ${{secrets.JWT_ALGORITMA}}
+      jwt_expire: ${{secrets.JWT_EXPIRE}}
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
