--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -24,6 +24,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: ${{secrets.DB_PASS}}
           POSTGRES_DB: ${{secrets.DB_NAME}}_test
+          POSTGRES_USER: ${{secrets.DB_USERNAME}}
         ports:
           - 5432:5432
         options: >-
