cicd6 install database postgresql, fix 4

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -49,6 +49,6 @@ jobs:
       - name: install all dependencies
         run: pip install -r requirements.txt
       - name: install pytest
-        run: |
-          pip install pytest
-          pytest
+        run: pip install pytest
+      - name: testing
+        run: pytest
