--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 alembic==1.7.7
 anyio==3.5.0
 asgiref==3.5.0
+atomicwrites==1.4.0
+attrs==21.4.0
 bcrypt==3.2.0
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.0.4
 colorama==0.4.4
 cryptography==36.0.1
@@ -15,22 +19,31 @@ h11==0.13.0
 idna==3.3
 importlib-metadata==4.11.2
 importlib-resources==5.4.0
+iniconfig==1.1.1
 Mako==1.2.0
 MarkupSafe==2.1.0
+packaging==21.3
 passlib==1.7.4
+pluggy==1.0.0
 psycopg2==2.9.3
+py==1.11.0
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
+pyparsing==3.0.7
+pytest==7.1.0
 python-dotenv==0.19.2
 python-jose==3.3.0
 python-multipart==0.0.5
+requests==2.27.1
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.32
 SQLAlchemy-Utils==0.38.2
 starlette==0.17.1
+tomli==2.0.1
 typing_extensions==4.1.1
+urllib3==1.26.8
 uvicorn==0.17.5
 zipp==3.7.0
